# python-web-dev

./: README.md  SYLLABUS.md
chapter_1/: README.md
chapter_2/: README.md
chapter_2/fastapi-todo/: pyproject.toml
chapter_2/fastapi-todo/fastapi_todo/: models.py
chapter_3/: README.md
chapter_3/fastapi-todo/fastapi_todo/: main.py
chapter_4/: README.md
chapter_4/fastapi-todo/fastapi_todo/: auth_service.py  constants.py  db.py  error_handlers.py  logging_config.py  main.py  models.py
chapter_4/fastapi-todo/tests/: test_auth_routes.py  test_auth_service.py  test_db.py  test_error_handlers.py  test_main.py  test_todo_api.py
chapter_5/: README.md
chapter_5/fastapi-todo/: README.md  mypy.ini  pyproject.toml
chapter_5/fastapi-todo/app/: auth_service.py  db.py  error_handlers.py  logging_middleware.py  main.py  models.py
chapter_5/fastapi-todo/app/auth/: dependencies.py  entities.py  router.py  (+2 more)
chapter_5/fastapi-todo/fastapi_todo/: db.py  main.py
chapter_5/fastapi-todo/tests/: test_auth_routes.py  test_auth_service.py  test_db.py  test_dependencies.py  test_error_handlers.py  test_logging_middleware.py  test_main.py  test_models.py  test_todo_api.py
chapter_6/: README.md
chapter_6/fastapi-todo/: README.md  pyproject.toml
chapter_6/fastapi-todo/app/: main.py
section_01_getting_started/chapter_01_introduction/fastapi-todo/: pyproject.toml
section_01_getting_started/chapter_01_introduction/fastapi-todo/fastapi_todo/: auth.py  main.py  models.py
section_01_getting_started/chapter_01_introduction/fastapi-todo/tests/: test_auth.py  test_main.py
(+29 files in other folders)
