[project]
name = "fastapi-todo"
version = "0.1.0"
description = "FastAPI hello world"
authors = [
    {name = "Walid Newaz",email = "mdwalid@gmail.com"}
]
license = {text = "NA"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"
httpx = "^0.28.1"

